--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Updated index.html with Google Analytics -->
+<!-- Updated index.html with Google Analytics and Video Link -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -95,7 +95,7 @@
         }
 
         .section {
-            flex: 1 1 calc(33.333% - 1rem);
+            flex: 1 1 calc(50% - 1rem);
             background: var(--bg-secondary);
             border-radius: 8px;
             padding: 2rem;
@@ -110,10 +110,6 @@
 
         .section p {
             color: var(--text-secondary);
-        }
-
-        .full-width {
-            flex: 1 1 100%;
         }
 
         /* Footer */
@@ -210,9 +206,15 @@
             <a href="game.html" style="color: var(--accent-color); text-decoration: underline;">Play the Game</a>
         </div>
 
-        <div class="section full-width">
+        <div class="section">
             <h2>> Posts</h2>
             <p>Coming soon...</p>
+        </div>
+
+        <div class="section">
+            <h2>> Bay Area Adventures</h2>
+            <p>An entirely accurate portrayal of my trips to the Bay Area.</p>
+            <a href="https://www.linkedin.com/posts/michael-keoshkerian_sanfrancisco-bayarea-maplesyrupstayswithme-activity-7242495193315229696-wj3_?utm_source=share&utm_medium=member_desktop" target="_blank" style="color: var(--accent-color); text-decoration: underline;">Watch the Video</a>
         </div>
     </main>
 
@@ -248,50 +250,4 @@
             // Toronto (EST)
             const tor = now.toLocaleString('en-US', {
                 timeZone: 'America/Toronto',
-                year: 'numeric',
-                month: '2-digit',
-                day: '2-digit',
-                hour: '2-digit',
-                minute: '2-digit',
-                hour12: false
-            });
-
-            // San Francisco (PST)
-            const sfo = now.toLocaleString('en-US', {
-                timeZone: 'America/Los_Angeles',
-                year: 'numeric',
-                month: '2-digit',
-                day: '2-digit',
-                hour: '2-digit',
-                minute: '2-digit',
-                hour12: false
-            });
-
-            // Yerevan (AMT)
-            const yvn = now.toLocaleString('en-US', {
-                timeZone: 'Asia/Yerevan',
-                year: 'numeric',
-                month: '2-digit',
-                day: '2-digit',
-                hour: '2-digit',
-                minute: '2-digit',
-                hour12: false
-            });
-
-            // Format the times
-            const formatTime = (timeStr) => {
-                const [date, time] = timeStr.split(', ');
-                const [month, day, year] = date.split('/');
-                return `${year}.${month}.${day}_${time}`;
-            };
-
-            const clockDisplay = `> TOR: ${formatTime(tor)}_EST | SFO: ${formatTime(sfo)}_PST | YVN: ${formatTime(yvn)}_AMT`;
-            document.querySelector('.tech-clock').innerHTML = clockDisplay + '<span class="cursor"></span>';
-        }
-
-        // Update clock immediately and then every second
-        updateClock();
-        setInterval(updateClock, 1000);
-    </script>
-</body>
-</html>
+                year: '
