--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <main class="container">
         <div class="section">
             <h2>> About</h2>
-            <p>Welcome to my corner of the internet. I’m Michael, a professional connector, challenge-seeker, and puzzle solver. I’m passionate about building meaningful relationships and occasionally figuring things out as I go. Stick around for updates, musings, and more.</p>
+            <p>Hi, I'm Mike. I’m all about connecting people, solving puzzles (both literal and figurative), and figuring things out along the way. If you’re expecting a perfectly polished space, you’re in the wrong place—but hey, at least I remembered to update this section.</p>
         </div>
 
         <div class="section">
