--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@
     <main class="container">
         <div class="section">
             <h2>> About</h2>
-            <p>Hi, I'm Mike. I’m all about connecting people, solving puzzles (both literal and figurative), and figuring things out along the way. <a href='https://www.linkedin.com/in/michael-keoshkerian/' target='_blank' style='color: var(--accent-color); text-decoration: underline;'>Check out my LinkedIn for more!</a></p>
+            <p>Hi, I'm Mike. I’m all about connecting people, solving puzzles (both literal and figurative), and figuring things out along the way.
+If you’re expecting a perfectly polished space, you’re in the wrong place—but hey, at least I remembered to update this section. <a href='https://www.linkedin.com/in/michael-keoshkerian/' target='_blank' style='color: var(--accent-color); text-decoration: underline;'>Check out my LinkedIn for more!</a></p>
         </div>
 
         <div class="section">
