--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
     <main class="container">
         <div class="section">
             <h2>> About</h2>
-            <p>Hi, I'm Mike. I’m all about connecting people, solving puzzles (both literal and figurative), and figuring things out along the way.
-If you’re expecting a perfectly polished space, you’re in the wrong place—but hey, at least I remembered to update this section. <a href='https://www.linkedin.com/in/michael-keoshkerian/' target='_blank' style='color: var(--accent-color); text-decoration: underline;'>Check out my LinkedIn for more!</a></p>
+            <p>Hi, I'm Mike. I’m all about connecting people, solving puzzles (both literal and figurative), and figuring things out along the way. <a href='https://www.linkedin.com/in/michael-keoshkerian/' target='_blank' style='color: var(--accent-color); text-decoration: underline;'>Check out my LinkedIn for more!</a></p>
         </div>
 
         <div class="section">
@@ -243,6 +242,39 @@ If you’re expecting a perfectly polished space, you’re in the wrong place—
             </div>
         </div>
     </footer>
+
+    <script>
+        function updateClock() {
+            const now = new Date();
+
+            // Function to format date and time
+            const formatDateTime = (timeZone) => {
+                return now.toLocaleString('en-US', {
+                    timeZone: timeZone,
+                    year: 'numeric',
+                    month: '2-digit',
+                    day: '2-digit',
+                    hour: '2-digit',
+                    minute: '2-digit',
+                    second: '2-digit',
+                    hour12: false,
+                });
+            };
+
+            // Formatting for each location
+            const tor = formatDateTime('America/Toronto');
+            const sfo = formatDateTime('America/Los_Angeles');
+            const yvn = formatDateTime('Asia/Yerevan');
+
+            // Update the clock display
+            const clockDisplay = `> TOR: ${tor}_EST | SFO: ${sfo}_PST | YVN: ${yvn}_AMT`;
+            document.querySelector('.tech-clock').innerHTML = clockDisplay + '<span class="cursor"></span>';
+        }
+
+        // Initialize and continuously update the clock
+        updateClock();
+        setInterval(updateClock, 1000);
+    </script>
 
     <script>
         function updateClock() {
