--- a/game.html
+++ b/game.html
@@ -1,27 +1,221 @@
-.game-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    gap: 10px;
-    padding: 10px;
-    width: 100%;
-    max-width: 1000px;
-}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>SF-Toronto Tech Match</title>
 
-/* Mobile adjustments */
-@media (max-width: 768px) {
-    .card {
-        width: 100%;
-        height: 140px;
-    }
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YCFL3R1VNF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-YCFL3R1VNF');
+    </script>
 
-    .header {
-        padding: 10px;
-        margin-bottom: 15px;
-    }
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+    <style>
+        :root {
+            --bg-primary: #0a0f1f;
+            --bg-secondary: #1a1f2e;
+            --accent-color: #7dd3fc;
+            --text-primary: #e6e6e6;
+            --netflix: #e11d48;
+            --roku: #7c3aed;
+            --cerebras: #8b5cf6;
+            --groq: #6366f1;
+            --rippling: #06b6d4;
+            --astera: #10b981;
+            --recursion: #ec4899;
+            --databricks: #3b82f6;
+            --ripple: #14b8a6;
+            --sledgehammer: #f59e0b;
+        }
 
-    .stats {
-        flex-direction: column;
-        gap: 10px;
-        padding: 10px;
-    }
-}
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            margin: 0;
+            padding: 10px;
+            background: var(--bg-primary);
+            font-family: 'Courier New', monospace;
+            color: var(--text-primary);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            min-height: 100vh;
+            width: 100%;
+        }
+
+        .header {
+            text-align: center;
+            margin-bottom: 20px;
+            background: var(--bg-secondary);
+            padding: 15px;
+            border-radius: 12px;
+            width: 100%;
+            max-width: 800px;
+        }
+
+        .header h1 {
+            font-size: clamp(1.5rem, 4vw, 2rem);
+            margin-bottom: 10px;
+        }
+
+        .header p {
+            font-size: clamp(0.9rem, 3vw, 1rem);
+            padding: 0 10px;
+        }
+
+        .stats {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 20px;
+            font-size: clamp(0.9rem, 3vw, 1.2em);
+            background: var(--bg-secondary);
+            padding: 15px;
+            border-radius: 8px;
+            width: 100%;
+            max-width: 800px;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .game-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: clamp(5px, 2vw, 15px);
+            width: 100%;
+            max-width: 1000px;
+            padding: 10px;
+        }
+
+        .card {
+            aspect-ratio: 3/4;
+            width: 100%;
+            position: relative;
+            cursor: pointer;
+            transition: transform 0.6s;
+            transform-style: preserve-3d;
+        }
+
+        .card.flipped {
+            transform: rotateY(180deg);
+        }
+
+        .card-front, .card-back {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            border-radius: 12px;
+            padding: 10px;
+            font-weight: bold;
+            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .card-front {
+            background: var(--bg-secondary);
+            border: 3px solid var(--accent-color);
+            transform: rotateY(180deg);
+            gap: 10px;
+            font-size: clamp(0.7rem, 2.5vw, 1.1rem);
+        }
+
+        .company-icon {
+            font-size: clamp(1.2em, 4vw, 1.8em);
+            margin-top: 5px;
+        }
+
+        .card-back {
+            background: linear-gradient(135deg, var(--bg-secondary), #2a3a5a);
+            border: 3px solid var(--accent-color);
+            font-size: 2em;
+        }
+
+        .matched {
+            animation: matchPulse 0.5s ease-in-out;
+        }
+
+        @keyframes matchPulse {
+            0% { transform: scale(1) rotateY(180deg); }
+            50% { transform: scale(1.1) rotateY(180deg); }
+            100% { transform: scale(1) rotateY(180deg); }
+        }
+
+        .netflix { border-color: var(--netflix); color: var(--netflix); }
+        .roku { border-color: var(--roku); color: var(--roku); }
+        .cerebras { border-color: var(--cerebras); color: var(--cerebras); }
+        .groq { border-color: var(--groq); color: var(--groq); }
+        .rippling { border-color: var(--rippling); color: var(--rippling); }
+        .astera { border-color: var(--astera); color: var(--astera); }
+        .recursion { border-color: var(--recursion); color: var(--recursion); }
+        .databricks { border-color: var(--databricks); color: var(--databricks); }
+        .ripple { border-color: var(--ripple); color: var(--ripple); }
+        .sledgehammer { border-color: var(--sledgehammer); color: var(--sledgehammer); }
+
+        .win-screen {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: var(--bg-secondary);
+            padding: clamp(20px, 5vw, 30px);
+            border-radius: 12px;
+            text-align: center;
+            display: none;
+            z-index: 1000;
+            border: 3px solid var(--accent-color);
+            width: 90%;
+            max-width: 400px;
+        }
+
+        .button {
+            background: var(--accent-color);
+            color: var(--bg-primary);
+            border: none;
+            padding: 10px 20px;
+            border-radius: 6px;
+            cursor: pointer;
+            font-size: 1.1em;
+            margin-top: 15px;
+        }
+
+        @media (max-width: 768px) {
+            body {
+                padding: 5px;
+            }
+
+            .header {
+                margin-bottom: 10px;
+                padding: 10px;
+            }
+
+            .stats {
+                padding: 10px;
+                margin-bottom: 10px;
+            }
+
+            .card-front {
+                padding: 5px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .game-grid {
+                grid-template-columns: repeat(3, 1fr);
+            }
+        }
+    </style>
+</head>
+[Rest of the code remains the same as before, just updating the email in the tracking events]
