--- a/game.html
+++ b/game.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>SF-Toronto Tech Match</title>
+    <title>SF to Toronto Tech Match</title>
+
+    <!-- Social Media Preview Tags -->
+    <meta property="og:title" content="SF to Toronto Tech Match" />
+    <meta property="og:description" content="Match the tech companies expanding from San Francisco to Toronto in this memory game!" />
+    <meta property="og:image" content="https://mkeoshkerian.github.io/preview.png" />
+    <meta property="og:url" content="https://mkeoshkerian.github.io/game.html" />
 
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YCFL3R1VNF"></script>
@@ -13,6 +19,8 @@
         gtag('js', new Date());
         gtag('config', 'G-YCFL3R1VNF');
     </script>
+
+[Rest of the game code remains exactly the same]
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
     <style>
