--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Updated index.html with Google Analytics and Video Link -->
+<!-- Updated index.html with Google Analytics, Video Link, and new dark theme -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,13 +17,15 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+        
         :root {
-            --bg-primary: #1a1f2e;
-            --bg-secondary: #1e2534;
-            --accent-color: #7dd3fc;
-            --text-primary: #e6e6e6;
-            --text-secondary: #94a3b8;
-            --font-mono: 'Courier New', Courier, monospace;
+            --bg-primary: #1e1e1e;       /* Darker background like the chat */
+            --bg-secondary: #2d2d2d;     /* Slightly lighter for sections */
+            --accent-color: #f97c73;     /* Orange-red accent similar to Claude's icons */
+            --text-primary: #e6e6e6;     /* Light text for main content */
+            --text-secondary: #a8a8a8;   /* Grey text for secondary content */
+            --font-mono: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif;
         }
 
         * {
@@ -197,14 +199,14 @@
     <main class="container">
         <div class="section">
             <h2>> About</h2>
-            <p>Hi, I'm Mike. I’m all about connecting people, solving puzzles (both literal and figurative), and figuring things out along the way.
-If you’re expecting a perfectly polished space, you’re in the wrong place—but hey, at least I remembered to update this section. 
+            <p>Hi, I'm Mike. I'm all about connecting people, solving puzzles (both literal and figurative), and figuring things out along the way.
+If you're expecting a perfectly polished space, you're in the wrong place—but hey, at least I remembered to update this section. 
                 <a href='https://www.linkedin.com/in/michael-keoshkerian/' target='_blank' style='color: var(--accent-color); text-decoration: underline;'>Check out my LinkedIn for more!</a></p>
         </div>
 
         <div class="section">
-            <h2>Tech Match Game</h2>
-            <p>Explore the companies I’ve helped expand into the Toronto Region, including Netflix, Ripple, Roku, and more. Test your memory in the Tech Match Game!</p>
+            <h2>> Tech Match Game</h2>
+            <p>Explore the companies I've helped expand into the Toronto Region, including Netflix, Ripple, Roku, and more. Test your memory in the Tech Match Game!</p>
             <a href="game.html" style="color: var(--accent-color); text-decoration: underline;">Play the Game</a>
         </div>
 
@@ -225,7 +227,7 @@ If you’re expecting a perfectly polished space, you’re in the wrong place—
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About</h3>
-                    <p>It’s just me here, tinkering with ideas and trying not to break the internet.</p>
+                    <p>It's just me here, tinkering with ideas and trying not to break the internet.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
@@ -258,7 +260,6 @@ If you’re expecting a perfectly polished space, you’re in the wrong place—
                     day: '2-digit',
                     hour: '2-digit',
                     minute: '2-digit',
-                    second: '2-digit',
                     hour12: false,
                 });
             };
@@ -277,12 +278,5 @@ If you’re expecting a perfectly polished space, you’re in the wrong place—
         updateClock();
         setInterval(updateClock, 1000);
     </script>
-
-    <script>
-        function updateClock() {
-            const now = new Date();
-
-            // Toronto (EST)
-            const tor = now.toLocaleString('en-US', {
-                timeZone: 'America/Toronto',
-                year: '
+</body>
+</html>
