--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="site-title">> My Space</h1>
-            <p class="site-subtitle">Figuring this out...</p>
+            <h1 class="site-title">> Michael Keoshkerian</h1>
+            <p class="site-subtitle">Relationships | Cross-Border Investments | International Strategy</p>
             <p class="tech-clock">
                 > TOR: 2024.11.29_12:29_EST | SFO: 2024.11.29_09:29_PST | YVN: 2024.11.29_21:29_AMT<span class="cursor"></span>
             </p>
@@ -199,8 +199,7 @@
     <main class="container">
         <div class="section">
             <h2>> About</h2>
-            <p>Hi, I'm Mike. I'm all about connecting people, solving puzzles (both literal and figurative), and figuring things out along the way.
-If you're expecting a perfectly polished space, you're in the wrong place—but hey, at least I remembered to update this section. 
+            <p>Hi, I'm Mike. I connect people, solve complex puzzles, and work across borders. Let me help. If we can work together, reach out.
                 <a href='https://www.linkedin.com/in/michael-keoshkerian/' target='_blank' style='color: var(--accent-color); text-decoration: underline;'>Check out my LinkedIn for more!</a></p>
         </div>
 
@@ -211,8 +210,12 @@ If you're expecting a perfectly polished space, you're in the wrong place—but 
         </div>
 
         <div class="section">
-            <h2>> Posts</h2>
-            <p>Coming soon...</p>
+            <h2>> What I'm Doing</h2>
+            <p>Current projects and initiatives:</p>
+            <ul style="list-style: none; text-align: left; margin-top: 15px;">
+                <li style="margin-bottom: 10px;"><a href="https://www.linkedin.com/posts/michael-keoshkerian_toronto-pancakes-coffee-activity-7312484159669608448-7VtM" target="_blank" style="color: var(--accent-color); text-decoration: underline;">Pancake Leadership Series</a></li>
+                <li style="margin-bottom: 10px;"><a href="https://www.linkedin.com/posts/michael-keoshkerian_sanfrancisco-toronto-activity-7305723598923603968-f9-r" target="_blank" style="color: var(--accent-color); text-decoration: underline;">SF-Toronto Connections</a></li>
+            </ul>
         </div>
 
         <div class="section">
