--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
 
     <main class="container">
         <div class="section">
-            <h2>> About</h2>
-            <p>Hi, I'm Mike. I connect people, solve complex puzzles, and work across borders. Let me help. If we can work together, reach out.
+            <h2>> Who I Am</h2>
+            <p>Hi, I'm Mike. I connect people, solve complex puzzles, and work across borders. 
                 <a href='https://www.linkedin.com/in/michael-keoshkerian/' target='_blank' style='color: var(--accent-color); text-decoration: underline;'>Check out my LinkedIn for more!</a></p>
         </div>
 
@@ -230,7 +230,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About</h3>
-                    <p>It's just me here, tinkering with ideas and trying not to break the internet.</p>
+                    <p>Let me help. If we can work together, reach out.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
