--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             display: inline-block;
             padding: 0.8rem 1.5rem;
             background-color: #8b7355;
-            color: white;
+            color: white !important;
             text-decoration: none;
             border-radius: 4px;
             font-size: 0.95rem;
@@ -153,7 +153,7 @@
 
         .btn:hover {
             background-color: #6b5635;
-            color: white;
+            color: white !important;
         }
 
         /* Mobile Responsive */
@@ -191,8 +191,8 @@
             <h2>Michael Keoshkerian</h2>
             <ul class="toc">
                 <li><a href="#about" class="toc-link">Who I Am</a></li>
-                <li><a href="#game" class="toc-link">Tech Match Game</a></li>
                 <li><a href="#projects" class="toc-link">Current Projects</a></li>
+                <li><a href="#writing" class="toc-link">Writing</a></li>
                 <li><a href="#adventures" class="toc-link">Bay Area Adventures</a></li>
             </ul>
         </nav>
@@ -201,37 +201,42 @@
         <main class="main-content">
             <section id="about" class="section">
                 <h1>Who I Am</h1>
-                <p>Hi, I'm Mike. I connect people, solve complex puzzles, and work across borders.</p>
-                <p>I specialize in helping companies expand into the Toronto Region, bringing together international businesses with local opportunities and talent.</p>
-                <p><a href="https://www.linkedin.com/in/michael-keoshkerian/" target="_blank">Check out my LinkedIn for more!</a></p>
-            </section>
-
-            <section id="game" class="section">
-                <h2>Tech Match Game</h2>
-                <div class="game-card">
-                    <h4>Memory Challenge</h4>
-                    <p>Explore the companies I've helped expand into the Toronto Region, including Netflix, Ripple, Roku, and more. Test your memory in the Tech Match Game!</p>
-                    <a href="game.html" class="btn">Play the Game</a>
-                </div>
+                <p>I've spent most of my career behind the scenes—helping innovators, policymakers, and founders connect the dots and build meaningful things. From advising tech-focused public policy, to supporting university research partnerships, to now working with global companies looking to grow in Canada through my role at Toronto Global, my work has always centered on enabling others to succeed.</p>
+                <p>I studied at the University of Toronto and OCAD University, and I've always been drawn to the spaces where creativity, strategy, and community meet. While I don't come from a traditional founder path, I care deeply about the people who build—and about doing the quiet work that helps make that possible.</p>
+                <p><a href="https://www.linkedin.com/in/michael-keoshkerian/" target="_blank">My LinkedIn</a></p>
             </section>
 
             <section id="projects" class="section">
-                <h2>What I'm Doing</h2>
-                <p>Current projects and initiatives:</p>
+                <h2>Current Projects</h2>
                 <div class="project-card">
-                    <h4>Business Development & Expansion</h4>
-                    <p>Helping technology companies navigate the Toronto market and establish successful operations in Canada.</p>
+                    <h4>Advising US companies on hiring and expanding to Toronto and Canada</h4>
+                    <p><a href="https://calendly.com/mkeoshkerian/" target="_blank">Book a time with me here</a></p>
                 </div>
                 <div class="project-card">
-                    <h4>Cross-Border Partnerships</h4>
-                    <p>Building bridges between international businesses and the Toronto Region's thriving tech ecosystem.</p>
+                    <h4>Pancake Networking</h4>
+                    <p><a href="https://www.linkedin.com/feed/update/urn:li:activity:7289673554197950465/?updateEntityUrn=urn%3Ali%3Afs_feedUpdate%3A%28V2%2Curn%3Ali%3Aactivity%3A7289673554197950465%29" target="_blank">Check out my LinkedIn post</a></p>
                 </div>
+                <div class="project-card">
+                    <h4>Boardroom Briefs</h4>
+                    <p><a href="https://youtu.be/2YwfSIR31eQ?si=_cSNTKzTWuoslN7A" target="_blank">Watch the video</a></p>
+                </div>
+            </section>
+
+            <section id="writing" class="section">
+                <h2>Writing</h2>
+                <p>Coming soon...</p>
             </section>
 
             <section id="adventures" class="section">
                 <h2>Bay Area Adventures</h2>
                 <p>An entirely accurate portrayal of my trips to the Bay Area.</p>
                 <p><a href="https://www.linkedin.com/posts/michael-keoshkerian_sanfrancisco-bayarea-maplesyrupstayswithme-activity-7242495193315229696-wj3_?utm_source=share&utm_medium=member_desktop" target="_blank">Watch the Video</a></p>
+                
+                <div class="game-card">
+                    <h4>Tech Match Game</h4>
+                    <p>Explore the companies I've helped expand into the Toronto Region, including Netflix, Ripple, Roku, and more. Test your memory in the Tech Match Game!</p>
+                    <a href="game.html" class="btn">Play the Game</a>
+                </div>
             </section>
         </main>
     </div>
